fix: Instagram account info layout on mobile screen

--- a/styles/instagram.module.scss
+++ b/styles/instagram.module.scss
@@ -167,3 +167,14 @@
     }
   }
 }*/
+
+@media screen and (max-width: 30em) {
+  .account {
+    padding: 1rem 1rem;
+    flex-direction: column;
+    
+    .profile {
+      margin-bottom: 1rem;  
+    }
+  }
+}
